force-app/main/default/objects/Integration_Error__c/Integration_Error__c.object-meta.xml
<CustomObject>
    <description>Central error log for all integration failures across SF Apex, Mule, and external system callbacks. Apex try/catch and Mule global error handlers both insert here. Powers the Integration Health dashboard (last-24h errors by source, top error types, unresolved criticals) and the Slack #integration-ops alert flow.</description>
    <label>Integration Error</label>
    <nameField>
        <displayFormat>ERR-{00000000}</displayFormat>
        <label>Integration Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>