force-app/main/default/objects/Integration_Error__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>UUID propagated across SF → Mule → external provider hops. Lets ops triage trace a single business transaction end-to-end even when failures span systems. Generated at the SF entry point (Apex or Flow) and passed as X-Correlation-Id header on every downstream callout.</description>
    <externalId>true</externalId>
    <label>Correlation Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>