force-app/main/default/objects/Integration_Error__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>The exception message or HTTP error body. Truncated to 32K Long Text Area limit.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>