force-app/main/default/objects/Integration_Error__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <description>Coarse category — Auth (401/403/bad-token), Parse (malformed JSON/XML), Validation (missing field/bad value), Downstream (5xx from external API), Timeout (callout exceeded), Other.</description>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auth</fullName>
            </value>
            <value>
                <fullName>Parse</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>Downstream</fullName>
            </value>
            <value>
                <fullName>Timeout</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>