force-app/main/default/objects/Integration_Error__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>Short label for the operation that failed. Examples: "Stripe Webhook checkout.session.completed", "Sendcloud POST /api/v3/orders", "JIRA Done webhook signature validation", "AssetCreation afterUpdate trigger".</description>
    <label>Operation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>