force-app/main/default/objects/Integration_Error__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Request/response body at the moment of failure. Stripe/DocuSign webhook body for inbound failures; Sendcloud/SAP REST body for outbound callout failures.</description>
    <label>Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>