force-app/main/default/objects/Integration_Error__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>SF record ID of the business object the failed operation was about — Order, Quote, Contract, Invoice, Asset. Polymorphic, kept as Text 18 because the parent type varies by Source_System.</description>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>