force-app/main/default/objects/Integration_Error__c/fields/Resolved_At__c.field-meta.xml
<CustomField>
    <fullName>Resolved_At__c</fullName>
    <description>Timestamp when Status flipped to Resolved. Used to compute MTTR (mean time to resolve) for the Integration Health dashboard.</description>
    <label>Resolved At</label>
    <type>DateTime</type>
</CustomField>