force-app/main/default/objects/Integration_Error__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <description>How many automatic retries the upstream system attempted before logging the error. Stripe webhook retries up to 3 days at exponential backoff; Mule until-successful retries per flow config. Helps distinguish transient vs persistent failures.</description>
    <label>Retry Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>