force-app/main/default/objects/Integration_Error__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Operations triage priority. Critical = customer-impacting / data loss / payment lost; alerts Slack #integration-ops immediately. Error = system function broken but no direct customer impact. Warning = degraded but recoverable. Info = trace logging.</description>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
                <default>true</default>
                <label>Error</label>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>