force-app/main/default/objects/Integration_Error__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>Which external system or SF subsystem produced the error. Used to attribute Mule, Apex, or callback failures and group dashboard panels.</description>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stripe</fullName>
            </value>
            <value>
                <fullName>DocuSign</fullName>
            </value>
            <value>
                <fullName>JIRA</fullName>
            </value>
            <value>
                <fullName>Sendcloud</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Slack</fullName>
            </value>
            <value>
                <fullName>Mule</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>