force-app/main/default/objects/Integration_Error__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Apex e.getStackTraceString() or Mule processor path. Critical for triaging which class/line/flow node failed.</description>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>