force-app/main/default/objects/Integration_Error__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Triage state. New = freshly logged, not yet acknowledged. Investigating = ops engineer claimed it. Resolved = root cause fixed and verified. Suppressed = known-noise pattern that should not page.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Investigating</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Suppressed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>